# video-subtitle-extractor

./: .env.example  .gitignore  README.md  app.py  gradio_app.py  pyproject.toml  requirements.txt
colab/: README.md  launch_gradio_colab.ipynb
docs/: ARCHITECTURE.md
runpod/: README.md  launch_gradio_runpod.ipynb
static/: app.js  index.html  styles.css
subtitle_extractor/: __init__.py  asr.py  batch.py  config.py  cookies.py  diagnostics.py  errors.py  exports.py  formatting.py  gradio_ui.py  http_headers.py  jobs.py  models.py  service.py  subtitles.py  validation.py  web.py  ytdlp_client.py
tests/: test_asr.py  test_batch.py  test_download_resilience.py  test_exports.py  test_gradio_ui.py  test_jobs.py  test_subtitles.py  test_uploaded_audio_context.py  test_validation_and_tracks.py  test_web_exports.py
