[project]
name = "video-subtitle-extractor"
version = "1.6.0"
description = "Local FastAPI web app for extracting Bilibili and YouTube subtitles as AI Agent context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.133,<1",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
  "yt-dlp>=2026.6.9",
  "faster-whisper>=1.1.1",
  "gradio>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py311"]
